[1.1.44] refactor, additional properties
- update property classnames for consistency (e.g. all instances of
‘col’ to ‘column’)
- add gradient builder tool
- add material shadow builder
- add default declarations for various properties (e.g. top: auto)
- remove redundant declarations and rulesets from atomic classes
- remove redundant classes from templates and snippets
- expose ‘line-measure’ values to config control
- add base/example negative margin and positioning values
- add ‘align-self, float, overflow, visibility’ property modules
- remove ‘frame’ composition module
- remove ‘tiny-table’ element module
- expose ‘screen-size’ parameter from rule-set-builders to individual
modules

--- a/assets/sass/base/properties/layout/_display.scss
+++ b/assets/sass/base/properties/layout/_display.scss
@@ -30,14 +30,14 @@
       display: flex,
     ),
   ), (
-    'selector': '.d-i-table',
-    'declarations': (
-      display: inline-table,
-    ),
-  ), (
     'selector': '.d-table',
     'declarations': (
       display: table,
+    ),
+  ), (
+    'selector': '.d-i-table',
+    'declarations': (
+      display: inline-table,
     ),
   ), (
     'selector': '.d-t-cell',
@@ -50,17 +50,17 @@
       display: table-row,
     ),
   ), (
-    'selector': '.d-t-rowgrp',
+    'selector': '.d-t-row-grp',
     'declarations': (
       display: table-row-group,
     ),
   ), (
-    'selector': '.d-t-col',
+    'selector': '.d-t-column',
     'declarations': (
       display: table-column,
     ),
   ), (
-    'selector': '.d-t-colgrp',
+    'selector': '.d-t-column-grp',
     'declarations': (
       display: table-column-group,
     ),
@@ -68,7 +68,6 @@
     'selector': '.d-table-fix',
     'declarations': (
       table-layout: fixed,
-      width: 100%,
     ),
   ),
-));
+), $screen-sizes);
