--- a/assets/sass/base/properties/layout/_flex-order.scss
+++ b/assets/sass/base/properties/layout/_flex-order.scss
@@ -1,12 +1,18 @@
-// # tiny table
+// # flex_ order
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-.tiny-table-wp {
-  overflow-y: auto;
-}
-
-.tiny-table {
-  min-width: map-get($screen-sizes, 's');
-}
+@include make-responsive-rulesets((
+  (
+    'selector': '.flx-ord-first',
+    'declarations': (
+      order: -1,
+    ),
+  ), (
+    'selector': '.flx-ord-last',
+    'declarations': (
+      order: 99,
+    ),
+  ),
+), $screen-sizes);
