--- a/assets/sass/base/properties/layout/_wrap.scss
+++ b/assets/sass/base/properties/layout/_wrap.scss
@@ -4,5 +4,5 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include make-responsive-rulesets(
-  make-RSON($wraps, '.wp', 'max-width')
+  make-RSON($wraps, '.wp', 'max-width'), $screen-sizes
 );
