--- a/assets/sass/base/properties/typography/_font-family.scss
+++ b/assets/sass/base/properties/typography/_font-family.scss
@@ -1,8 +1,8 @@
-// # font face declarations
+// # font_ family
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
 @include make-responsive-rulesets(
-  make-RSON($font-families, '.ff', 'font-family')
+  make-RSON($font-families, '.f-f', 'font-family'), $screen-sizes
 );
