--- a/assets/sass/base/properties/typography/_font-render.scss
+++ b/assets/sass/base/properties/typography/_font-render.scss
@@ -1,13 +1,18 @@
-// # font render
+// # font_ render
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include make-responsive-rulesets((
   (
-    'selector': '.fr-smooth',
+    'selector': '.f-r-auto',
+    'declarations': (
+      -webkit-font-smoothing: auto,
+    ),
+  ), (
+    'selector': '.f-r-smooth',
     'declarations': (
       -webkit-font-smoothing: antialiased,
     ),
   ),
-));
+), $screen-sizes);
