--- a/assets/sass/base/properties/typography/_font-style.scss
+++ b/assets/sass/base/properties/typography/_font-style.scss
@@ -1,18 +1,18 @@
-// # font style
+// # font_ style
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include make-responsive-rulesets((
   (
-    'selector': '.fs-normal',
+    'selector': '.f-sy-normal',
     'declarations': (
       font-style: normal,
     ),
   ), (
-    'selector': '.fs-italic',
+    'selector': '.f-sy-italic',
     'declarations': (
       font-style: italic,
     ),
   ),
-));
+), $screen-sizes);
