--- a/assets/sass/base/tools/_map-extension.scss
+++ b/assets/sass/base/tools/_map-extension.scss
@@ -3,12 +3,12 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-// # @mixin concat-maps($maps...)
-//
-// Returns a new merged map of multiple maps
-//
-// @param `arglist`: $maps: List of maps to merge
-// @return `map`
+// # concat-maps
+// {Function} returns a new merged map of multiple maps
+// -
+// @param {Arglist} $maps - Argument of maps to merge
+// -
+// @return {Map}
 ////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////
 @function concat-maps($maps...) {
@@ -16,5 +16,6 @@
   @each $map in $maps {
     $result: map-merge($result, $map);
   }
+
   @return $result;
 }
