--- a/assets/sass/element/_form-multi-input.scss
+++ b/assets/sass/element/_form-multi-input.scss
@@ -5,7 +5,10 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 
 .multi-opt {
-  position: relative;
+  // position: relative;
+  // display: inline-block;
+  // border: 1px all;
+  // border-radius: 100%; // IF RADIO
   width: 1em;
   height: 1em;
   margin-top: -0.125em;
