--- a/assets/sass/base/configurations/_layout.scss
+++ b/assets/sass/base/configurations/_layout.scss
@@ -3,6 +3,9 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
+// # container
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 $screen-sizes: (
   's': 40em,
   'm': 60em,
@@ -19,7 +22,32 @@ $wraps: (
 
 $grids: 12; // ... 
 
-$spacings: (
+// # positioning
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+$z-indexes: (
+  // n1: -1,
+  '0': 0,
+  '1': 1,
+  '2': 2,
+  '3': 3,
+  // ...
+  '100': 100,
+);
+
+$moves: (
+  // 'n1': -1em,
+  '0': 0,
+  '1': 1em,
+  '2': 2em,
+  // ...
+);
+
+// # spacing
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+$margins: (
+  // 'n1': -0.25em,
   '0': 0,
   '1': 0.25em,
   '2': 0.5em,
@@ -31,11 +59,14 @@ $spacings: (
   // ...
 );
 
-$positionings: (
-  'n2': -2em,
-  'n1': -1em,
+$paddings: (
   '0': 0,
-  '1': 1em,
-  '2': 2em,
+  '1': 0.25em,
+  '2': 0.5em,
+  '3': 1em,
+  '4': 2em,
+  '5': 4em,
+  '6': 8em,
+  '7': 16em,
   // ...
 );
