--- a/assets/sass/base/configurations/_typography.scss
+++ b/assets/sass/base/configurations/_typography.scss
@@ -3,6 +3,9 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
+// # font
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
 $base-font-size: 100%;
 
 $font-families: (
@@ -20,14 +23,23 @@ $type-scale: (
   // ...
 );
 
+// # line
+////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////
+$line-measures: (
+  'base': 30em,
+  'narrow': 20em,
+  'wide': 34em,
+);
+
 $line-heights: (
   'copy': 1.45,
   'title': 1.25,
   'solid': 1,
 );
 
-$trackings: (
-  'track': 0.05em,
+$line-trackings: (
+  'base': 0.05em,
   'tight': -0.5em,
   'wide': 0.25em,
 );
