--- a/assets/sass/base/properties/layout/_flex-direction.scss
+++ b/assets/sass/base/properties/layout/_flex-direction.scss
@@ -1,28 +1,28 @@
-// # flex direction
+// # flex_ direction
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include make-responsive-rulesets((
   (
-    'selector': '.fdr-row',
+    'selector': '.flx-dir-row',
     'declarations': (
       flex-direction: row,
     ),
   ), (
-    'selector': '.fdr-row-r',
+    'selector': '.flx-dir-row-r',
     'declarations': (
       flex-direction: row-reverse,
     ),
   ), (
-    'selector': '.fdr-col',
+    'selector': '.flx-dir-column',
     'declarations': (
       flex-direction: column,
     ),
   ), (
-    'selector': '.fdr-col-r',
+    'selector': '.flx-dir-column-r',
     'declarations': (
       flex-direction: column-rev
     ),
   ),
-));
+), $screen-sizes);
