--- a/assets/sass/base/properties/layout/_horizontal-align.scss
+++ b/assets/sass/base/properties/layout/_horizontal-align.scss
@@ -1,4 +1,4 @@
-// # horizontal align
+// # horizontal-align
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
@@ -23,4 +23,4 @@
       margin-left: auto,
     ),
   ),
-));
+), $screen-sizes);
