--- a/assets/sass/base/properties/layout/_margin.scss
+++ b/assets/sass/base/properties/layout/_margin.scss
@@ -3,13 +3,14 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$margin-all-RSON: make-RSON($spacings, '.m-all', 'margin');
-$margin-vertical-RSON: make-RSON($spacings, '.m-ver', ('margin-top', 'margin-bottom'));
-$margin-horizontal-RSON: make-RSON($spacings, '.m-hor', ('margin-right', 'margin-left'));
-$margin-top-RSON: make-RSON($spacings, '.m-top', 'margin-top');
-$margin-right-RSON: make-RSON($spacings, '.m-right', 'margin-right');
-$margin-bottom-RSON: make-RSON($spacings, '.m-bottom', 'margin-bottom');
-$margin-left-RSON: make-RSON($spacings, '.m-left', 'margin-left');
+$margin-all-RSON: make-RSON($margins, '.m-all', 'margin');
+$margin-vertical-RSON: make-RSON($margins, '.m-ver', ('margin-top', 'margin-bottom'));
+$margin-horizontal-RSON: make-RSON($margins, '.m-hor', ('margin-right', 'margin-left'));
+$margin-top-RSON: make-RSON($margins, '.m-top', 'margin-top');
+$margin-right-RSON: make-RSON($margins, '.m-right', 'margin-right');
+$margin-bottom-RSON: make-RSON($margins, '.m-bottom', 'margin-bottom');
+$margin-left-RSON: make-RSON($margins, '.m-left', 'margin-left');
+
 $full-margin-RSON: concat-lists(
   $margin-all-RSON,
   $margin-vertical-RSON,
@@ -19,4 +20,5 @@ $full-margin-RSON: concat-lists(
   $margin-bottom-RSON,
   $margin-left-RSON
 );
-@include make-responsive-rulesets($full-margin-RSON);
+
+@include make-responsive-rulesets($full-margin-RSON, $screen-sizes);
