--- a/assets/sass/base/properties/layout/_vertical-align.scss
+++ b/assets/sass/base/properties/layout/_vertical-align.scss
@@ -1,4 +1,4 @@
-// # vertical align
+// # vertical-align
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
@@ -45,4 +45,4 @@
       vertical-align: baseline,
     ),
   ),
-));
+), $screen-sizes);
