--- a/assets/sass/base/properties/theme/_background-repeat.scss
+++ b/assets/sass/base/properties/theme/_background-repeat.scss
@@ -1,28 +1,28 @@
-// # background repeat
+// # background_ repeat
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include make-responsive-rulesets((
   (
-    'selector': '.bgr-none',
+    'selector': '.bg-r-none',
     'declarations': (
       background-repeat: no-repeat,
     ),
   ), (
-    'selector': '.bgr-repeat',
+    'selector': '.bg-r-repeat',
     'declarations': (
       background-repeat: repeat,
     ),
   ), (
-    'selector': '.bgr-repeat-x',
+    'selector': '.bg-r-repeat-x',
     'declarations': (
       background-repeat: repeat-x,
     ),
   ), (
-    'selector': '.bgr-repeat-y',
+    'selector': '.bg-r-repeat-y',
     'declarations': (
       background-repeat: repeat-y,
     ),
   ),
-));
+), $screen-sizes);
