--- a/assets/sass/base/properties/theme/_border-width.scss
+++ b/assets/sass/base/properties/theme/_border-width.scss
@@ -1,34 +1,36 @@
-// # border width
+// # border_ width
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$border-width-config-RSON: make-RSON($border-widths, '.bw', 'border-width');
-$border-width-static-RSON: (
+$border-width-RSON: make-RSON($border-widths, '.b-w', 'border-width');
+$global-border-width-RSON: (
   (
-    'selector': '.bw-top-0',
+    'selector': '.b-w-top-0',
     'declarations': (
       border-top-width: 0,
     ),
   ), (
-    'selector': '.bw-right-0',
+    'selector': '.b-w-right-0',
     'declarations': (
       border-right-width: 0,
     ),
   ), (
-    'selector': '.bw-bottom-0',
+    'selector': '.b-w-bottom-0',
     'declarations': (
       border-bottom-width: 0,
     ),
   ), (
-    'selector': '.bw-left-0',
+    'selector': '.b-w-left-0',
     'declarations': (
       border-left-width: 0,
     ),
   ),
 );
+
 $full-border-width-RSON: concat-lists(
-  $border-width-config-RSON,
-  $border-width-static-RSON
+  $border-width-RSON,
+  $global-border-width-RSON
 );
-@include make-responsive-rulesets($full-border-width-RSON);
+
+@include make-responsive-rulesets($full-border-width-RSON, $screen-sizes);
