--- a/assets/sass/base/properties/theme/_color.scss
+++ b/assets/sass/base/properties/theme/_color.scss
@@ -3,10 +3,17 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$color-base-RSON: make-RSON($colors, '.c', 'color');
-$color-hover-RSON: make-RSON($colors, '.hov-c', 'color', ':hover');
+$global-colors: map-merge($colors, (
+  'transparent': transparent,
+  'inherit': inherit,
+));
+
+$color-RSON: make-RSON($global-colors, '.c', 'color');
+$color-hover-RSON: make-RSON($global-colors, '.hov-c', 'color', ':hover');
+
 $full-color-RSON: concat-lists(
-  $color-base-RSON,
+  $color-RSON,
   $color-hover-RSON
 );
-@include make-responsive-rulesets($full-color-RSON);
+
+@include make-responsive-rulesets($full-color-RSON, $screen-sizes);
