--- a/assets/sass/base/properties/theme/_fill.scss
+++ b/assets/sass/base/properties/theme/_fill.scss
@@ -3,10 +3,12 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$fill-base-RSON: make-RSON($colors, '.fil', 'fill');
+$fill-RSON: make-RSON($colors, '.fil', 'fill');
 $fill-hover-RSON: make-RSON($colors, '.hov-fil', 'fill', ':hover');
+
 $full-fill-RSON: concat-lists(
-  $fill-base-RSON,
+  $fill-RSON,
   $fill-hover-RSON
 );
-@include make-responsive-rulesets($full-fill-RSON);
+
+@include make-responsive-rulesets($full-fill-RSON, $screen-sizes);
