--- a/assets/sass/base/properties/typography/_font-size.scss
+++ b/assets/sass/base/properties/typography/_font-size.scss
@@ -1,8 +1,8 @@
-// # font size
+// # font_ size
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include make-responsive-rulesets(
-  make-RSON($type-scale, '.fs', 'font-size')
+  make-RSON($type-scale, '.f-s', 'font-size'), $screen-sizes
 );
