--- a/assets/sass/base/properties/typography/_font-weight.scss
+++ b/assets/sass/base/properties/typography/_font-weight.scss
@@ -1,53 +1,53 @@
-// # font weight
+// # font_ weight
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
 @include make-responsive-rulesets((
   (
-    'selector': '.fw-1',
+    'selector': '.f-w-1',
     'declarations': (
       font-weight: 100,
     ),
   ), (
-    'selector': '.fw-2',
+    'selector': '.f-w-2',
     'declarations': (
       font-weight: 200,
     ),
   ), (
-    'selector': '.fw-3',
+    'selector': '.f-w-3',
     'declarations': (
       font-weight: 300,
     ),
   ), (
-    'selector': '.fw-4',
+    'selector': '.f-w-4',
     'declarations': (
       font-weight: 400,
     ),
   ), (
-    'selector': '.fw-5',
+    'selector': '.f-w-5',
     'declarations': (
       font-weight: 500,
     ),
   ), (
-    'selector': '.fw-6',
+    'selector': '.f-w-6',
     'declarations': (
       font-weight: 600,
     ),
   ), (
-    'selector': '.fw-7',
+    'selector': '.f-w-7',
     'declarations': (
       font-weight: 700,
     ),
   ), (
-    'selector': '.fw-8',
+    'selector': '.f-w-8',
     'declarations': (
       font-weight: 800,
     ),
   ), (
-    'selector': '.fw-9',
+    'selector': '.f-w-9',
     'declarations': (
       font-weight: 900,
     ),
   ),
-));
+), $screen-sizes);
