--- a/assets/sass/base/properties/typography/_text-indent.scss
+++ b/assets/sass/base/properties/typography/_text-indent.scss
@@ -1,19 +1,21 @@
-// # text indent
+// # text_ indent
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////
 
-$text-indent-config-RSON: make-RSON($spacings, '.ti', 'text-indent');
-$text-indent-static-RSON: (
+$text-indent-RSON: make-RSON($margins, '.t-i', 'text-indent');
+$global-text-indent-RSON: (
   (
-    'selector': '.ti-100',
+    'selector': '.t-i-100',
     'declarations': (
       text-indent: 100%,
     ),
   ),
 );
+
 $full-text-indent-RSON: concat-lists(
-  $text-indent-config-RSON,
-  $text-indent-static-RSON
+  $text-indent-RSON,
+  $global-text-indent-RSON
 );
-@include make-responsive-rulesets($full-text-indent-RSON);
+
+@include make-responsive-rulesets($full-text-indent-RSON, $screen-sizes);
