--- a/assets/sass/element/_form-select.scss
+++ b/assets/sass/element/_form-select.scss
@@ -4,20 +4,14 @@
 //////////////////////////////////////////////////////////////////////////////////////////
 
 .select {
-  position: relative;
+  // position: relative;
 
   &::after {
     content: "\25bc";
     position: absolute;
     top: 50%;
-    right: map-get($spacings, '3');
+    right: map-get($paddings, '3');
     transform: translate(0, -50%);
     font-size: 0.5em;
-  }
-
-  &:hover {
-    &::after {
-      color: map-get($neutral-colors, 'grey');
-    }
   }
 }
