--- a/assets/sass/element/_whirligig.scss
+++ b/assets/sass/element/_whirligig.scss
@@ -7,17 +7,15 @@
 ////////////////////////////////////////////////////////////////////////////////////////////////////
 
 .whirligig {
+  // overflow: hidden;
   width: 39px;
   height: 39px;
-  margin-right: auto;
-  margin-left: auto;
-  overflow: hidden;
 }
 
 .whirligig__side {
+  // float: left;
   width: 1 / 3 * 100%;
   height: 1 / 3 * 100%;
-  float: left;
   animation: grid-scale-delay 1.3s infinite ease-in-out;
 
   &:nth-child(4),
