--- a/assets/sass/base/properties/layout/_visibility.scss
+++ b/assets/sass/base/properties/layout/_visibility.scss
@@ -21,3 +21,25 @@
     ),
   ),
 ), $screen-sizes);
+
+// js enhancements
+.js {
+  @include make-responsive-rulesets((
+    (
+      'selector': '.js-vis-visible',
+      'declarations': (
+        visibility: visible,
+      ),
+    ), (
+      'selector': '.js-vis-hidden',
+      'declarations': (
+        visibility: hidden,
+      ),
+    ), (
+      'selector': '.js-vis-collapse',
+      'declarations': (
+        visibility: collapse,
+      ),
+    ),
+  ), $screen-sizes);
+}
