--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -98,6 +98,7 @@
 @import "element/whirligig";
 @import "element/list";
 @import "element/counter-list";
+@import "element/form-date-input";
 @import "element/form-multi-input";
 @import "element/form-select";
 
