--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -79,6 +79,7 @@
 @import "base/properties/theme/background-size";
 @import "base/properties/theme/background-position";
 @import "base/properties/theme/background-repeat";
+@import "base/properties/theme/background-attachment";
 @import "base/properties/theme/border";
 @import "base/properties/theme/border-style";
 @import "base/properties/theme/border-width";
